--- a/sdeloader.cfg
+++ b/sdeloader.cfg
@@ -1,9 +1,16 @@
 [Database]
-mysql=mysql+pymysql://yaml:yamlpass@localhost/sdeyaml?charset=utf8
-postgres=postgresql+psycopg2://yaml:yaml@localhost/sdeyaml
-postgresschema=postgresql+psycopg2://yaml:yaml@localhost/sdeyamlschema
+# Production/Remote connection strings
+mysql_remote=mysql+pymysql://yaml:yamlpass@localhost/sdeyaml?charset=utf8
+postgres_remote=postgresql+psycopg2://yaml:yaml@localhost/sdeyaml
+postgresschema_remote=postgresql+psycopg2://yaml:yaml@localhost/sdeyamlschema
+mssql_remote=mssql+pymssql://evesde:Dnm24syusKIIvo1@localhost/evesde?charset=utf8
+
+# Local Docker testing connection strings (for use with docker-compose.test.yml)
+mysql=mysql+pymysql://evesde:evesdepass@127.0.0.1:3306/evesde?charset=utf8
+postgres=postgresql+psycopg2://evesde:evesdepass@127.0.0.1:5432/evesde
+postgresschema=postgresql+psycopg2://evesde:evesdepass@127.0.0.1:5432/evesde
 sqlite=sqlite+pysqlite:///eve.db
-mssql=mssql+pymssql://evesde:Dnm24syusKIIvo1@localhost/evesde?charset=utf8
+mssql=mssql+pymssql://sa:YourStrong!Passw0rd@127.0.0.1:1433/evesde?charset=utf8
 
 [Files]
 sourcePath=sde
