More tweaks to make ACT work for local testing of Github Actions in preperation of upgrades to the github actions to support MySQL, Postgres and MSSql dumps.

--- a/.actrc
+++ b/.actrc
@@ -3,7 +3,7 @@
 
 # Use larger runner image with more pre-installed tools
 # Options: node:16-buster-slim, catthehacker/ubuntu:act-latest, catthehacker/ubuntu:full-latest
--P ubuntu-latest=catthehacker/ubuntu:full-latest
+-P ubuntu-latest=catthehacker/ubuntu:act-latest
 
 # Default event to trigger (can override with -e flag)
 --defaultbranch main
