--- a/.github/workflows/update-sde.yml
+++ b/.github/workflows/update-sde.yml
@@ -497,7 +497,7 @@ jobs:
           MSSQL_PID: Developer
         ports:
           - 1433:1433
-        options: --health-cmd="/opt/mssql-tools/bin/sqlcmd -S localhost -U sa -P YourStrong!Passw0rd -Q 'SELECT 1'" --health-interval=10s --health-timeout=5s --health-retries=10
+        options: --health-cmd="/opt/mssql-tools/bin/sqlcmd -S localhost -U sa -P 'YourStrong!Passw0rd' -Q 'SELECT 1' -b -V1" --health-interval=10s --health-timeout=10s --health-retries=20
 
     steps:
       - name: Checkout repository
@@ -532,15 +532,27 @@ jobs:
       - name: Wait for MSSQL service
         run: |
           echo "Waiting for MSSQL to be ready..."
-          for i in {1..30}; do
-            /opt/mssql-tools/bin/sqlcmd -S 127.0.0.1 -U sa -P 'YourStrong!Passw0rd' -Q "SELECT 1" 2>/dev/null && break
-            echo "Waiting... ($i/30)"
+          # Wait up to 2 minutes for MSSQL to fully start
+          for i in {1..60}; do
+            if /opt/mssql-tools/bin/sqlcmd -S 127.0.0.1 -U sa -P 'YourStrong!Passw0rd' -Q "SELECT 1" 2>/dev/null; then
+              echo "MSSQL is ready!"
+              break
+            fi
+            echo "Waiting... ($i/60)"
             sleep 2
           done
 
+          # Verify connection one more time
+          /opt/mssql-tools/bin/sqlcmd -S 127.0.0.1 -U sa -P 'YourStrong!Passw0rd' -Q "SELECT @@VERSION"
+
       - name: Create MSSQL database
         run: |
+          echo "Creating evesde database..."
           /opt/mssql-tools/bin/sqlcmd -S 127.0.0.1 -U sa -P 'YourStrong!Passw0rd' -Q "CREATE DATABASE evesde"
+          echo "Database created successfully"
+
+          # Verify database was created
+          /opt/mssql-tools/bin/sqlcmd -S 127.0.0.1 -U sa -P 'YourStrong!Passw0rd' -Q "SELECT name FROM sys.databases WHERE name = 'evesde'"
 
       - name: Run Load.py to populate database
         run: |
